@@ -1,9 +1,26 @@
 /*
- * WARNING - THIS FILE IS GENERATED AUTOMATICALLY - DO NOT EDIT
- * It is generated by mkhelpmsgs.pl from helpmsgs.src.
+ * dselect - Debian package maintenance user interface
+ * helpmsgs.cc - list of help messages
+ *
+ * Copyright (C) 1995 Ian Jackson <ian@chiark.greenend.org.uk>
+ *
+ * This is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2,
+ * or (at your option) any later version.
+ *
+ * This is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this; if not, write to the Free Software
+ * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
 #include "helpmsgs.h"
+
 const struct helpmessage hlp_listkeys = {
   N_("Keystrokes"), N_("\
 Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n\
@@ -29,6 +46,7 @@ Quit, exit, overwrite (note capitals!):       ?, F1 request help (also Help)\n\
    U     set all to sUggested state             /   search (Return to cancel)\n\
    D     set all to Directly requested state  n, \\  repeat last search\n")
 };
+
 const struct helpmessage hlp_mainintro = {
   N_("Introduction to package selections"), N_("\
 Welcome to dselect's main package listing.\n\n\
@@ -53,6 +71,7 @@ dependencies will be done - here too you may see a sublist.\n\n\
 \
 Press <space> to leave help and enter the list now.\n")
 };
+
 const struct helpmessage hlp_readonlyintro = {
   N_("Introduction to read-only package list browser"), N_("\
 Welcome to dselect's main package listing.\n\n\
@@ -71,6 +90,7 @@ When you have finished browsing, press `Q' or <enter> to quit.\n\n\
 \
 Press <space> to leave help and enter the list now.\n")
 };
+
 const struct helpmessage hlp_recurintro = {
   N_("Introduction to conflict/dependency resolution sub-list"), N_("\
 Dependency/conflict resolution - introduction.\n\n\
@@ -96,6 +116,7 @@ override a recommendation or think that the program is mistaken.\n\n\
 \
 Press <space> to leave help and enter the sub-list; remember: press `?' for help.\n")
 };
+
 const struct helpmessage hlp_displayexplain1 = {
   N_("Display, part 1: package listing and status chars"), N_("\
 The top half of the screen shows a list of packages.  For each package you see\n\
@@ -121,6 +142,7 @@ four columns for its current status on the system and mark.  In terse mode (use\
 Also displayed are each package's Priority, Section, name, installed and\n\
 available version numbers (shift-V to display/hide) and summary description.\n")
 };
+
 const struct helpmessage hlp_displayexplain2 = {
   N_("Display, part 2: list highlight; information display"), N_("\
 * Highlight: One line in the package list will be highlighted.  It indicates\n\
@@ -144,6 +166,7 @@ const struct helpmessage hlp_displayexplain2 = {
   Use the `i' key to cycle through the displays, and `I' to hide the\n\
   information display or expand it to use almost all of the screen.\n")
 };
+
 const struct helpmessage hlp_methintro = {
   N_("Introduction to method selection display"), N_("\
 dselect and dpkg can do automatic installation, loading the package files to be\n\
@@ -163,6 +186,7 @@ of installation methods.\n\n\
 A full list of keystrokes is available by pressing `k' now, or from the help\n\
 menu reachable by pressing `?'.\n")
 };
+
 const struct helpmessage hlp_methkeys = {
   N_("Keystrokes for method selection"), N_("\
 Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n\
