@@ -5,6 +5,9 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     Thanks to Ian Jackson <iwj@ubuntu.com>. Closes: #375703
   * Use dpkg-architecture from the source tree to get the target Debian
     architecture, instead of duplicating the logic in the m4 files.
+  * Remove comment headers in dselect/helpmsgs.{cc,h} about the files being
+    autogenerated, replace them with a proper license and copyright comment.
+    Closes: #382308
 
   [ Added dpkg Translations ]
   * Dzongkha (Kinley Tshering)
