@@ -1,3 +1,9 @@
+2006-08-10  Guillem Jover  <guillem@debian.org>
+
+	* dselect/helpmsgs.cc: Replace the comment header about the file being
+	autogenerated with a proper copyright and license one. Reindented.
+	* dselect/helpmsgs.h: Likewise.
+
 2006-08-08  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-architecture.pl (dpkglibdir): Set to '.' where
